// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`DataFilter !inDataForm 1`] = `
.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin: 0px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  row-gap: 12px;
}

.c6 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-right: 12px;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  justify-content: center;
}

.c9 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  border: solid 1px rgba(0, 0, 0, 0.36);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 24px;
  width: 24px;
  justify-content: center;
  border-radius: 6px;
}

.c11 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  width: 100%;
  height: 100%;
}

.c13 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.c15 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-self: stretch;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  width: 100%;
  border-radius: 12px;
}

.c16 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-self: stretch;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  justify-content: center;
  overflow: visible;
}

.c18 {
  display: flex;
  box-sizing: border-box;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex-basis: 100%;
  height: 100%;
  justify-content: center;
}

.c19 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #008567;
  color: #ffffff;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 12px;
  width: 12px;
  border-radius: 100%;
}

.c20 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-self: stretch;
  background-color: rgba(0, 133, 103, 0.4);
  color: #555555;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  width: 100%;
  border-radius: 12px;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: flex-start;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 0 0 auto;
  flex-wrap: wrap;
  column-gap: 12px;
  row-gap: 12px;
}

.c12 {
  margin-left: 12px;
  margin-right: 12px;
  font-size: 1rem;
  line-height: 1.25rem;
  text-align: right;
  font-weight: 400;
}

.c21 {
  margin-left: 12px;
  margin-right: 12px;
  font-size: 1rem;
  line-height: 1.25rem;
  font-weight: 400;
}

.c3 {
  max-width: 100%;
}

.c5 {
  display: flex;
  flex-direction: row;
  align-items: start;
  user-select: none;
  -webkit-user-select: none;
  width: fit-content;
  padding: 0px;
  cursor: pointer;
  font-weight: 400;
  width: auto;
  border: 1px solid rgba(0, 0, 0, 0);
}

.c5 input:checked+span[class*=CheckBoxToggle]>span[class*=CheckBoxKnob] {
  left: 25px;
}

.c8 {
  opacity: 0;
  -moz-appearance: none;
  width: 0;
  height: 0;
  margin: 0;
  cursor: pointer;
}

.c8:checked+span>span {
  left: calc( 48px - 24px );
  background: #ffffff;
}

.c10 {
  background: rgba(0, 0, 0, 0);
  border-color: rgba(0, 0, 0, 0.36);
}

.c10:hover {
  background: rgba(0, 0, 0, 0.04);
}

.c7 {
  flex-shrink: 0;
}

.c17 {
  position: absolute;
  clip: rect(0 0 0 0);
  clip-path: inset(50%);
  height: 1px;
  overflow: hidden;
  white-space: nowrap;
  width: 1px;
}

.c14 {
  user-select: none;
}

.c0 {
  font-family: 'Metric',Arial,sans-serif;
  font-size: 1.125rem;
  line-height: 1.5rem;
  background-color: #ffffff;
  color: #555555;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {
  .c4 {
    margin: 0px;
  }
}

@media only screen and (max-width: 768px) {
  .c4 {
    row-gap: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c6 {
    margin-right: 12px;
  }
}

@media only screen and (max-width: 768px) {
  .c9 {
    border: solid 1px rgba(0, 0, 0, 0.36);
  }
}

@media only screen and (max-width: 768px) {
  .c15 {
    border-radius: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c20 {
    border-radius: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c2 {
    column-gap: 6px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
    id="data"
  >
    <div
      class="c2"
    >
      <form
        class="c3"
      >
        <div
          aria-label="name"
          class="c4 StyledCheckBoxGroup-sc-2nhc5d-0"
          id="data-name"
          role="group"
        >
          <label
            class="c5"
          >
            <div
              class="c6 c7"
            >
              <input
                class="c8"
                type="checkbox"
              />
              <div
                class="c9 c10"
              />
            </div>
            <span>
              aa
            </span>
          </label>
          <label
            class="c5"
          >
            <div
              class="c6 c7"
            >
              <input
                class="c8"
                type="checkbox"
              />
              <div
                class="c9 c10"
              />
            </div>
            <span>
              bb
            </span>
          </label>
          <label
            class="c5"
          >
            <div
              class="c6 c7"
            >
              <input
                class="c8"
                type="checkbox"
              />
              <div
                class="c9 c10"
              />
            </div>
            <span>
              cc
            </span>
          </label>
        </div>
      </form>
      <form
        class="c3"
      >
        <div
          aria-label="enabled"
          class="c4 StyledCheckBoxGroup-sc-2nhc5d-0"
          id="data-enabled"
          role="group"
        >
          <label
            class="c5"
          >
            <div
              class="c6 c7"
            >
              <input
                class="c8"
                type="checkbox"
              />
              <div
                class="c9 c10"
              />
            </div>
            <span>
              true
            </span>
          </label>
          <label
            class="c5"
          >
            <div
              class="c6 c7"
            >
              <input
                class="c8"
                type="checkbox"
              />
              <div
                class="c9 c10"
              />
            </div>
            <span>
              false
            </span>
          </label>
        </div>
      </form>
      <form
        class="c3"
      >
        <div
          aria-label="rating"
          class="c11"
          id="data-rating"
        >
          <span
            class="c12"
            style="width: 0px;"
          >
            2.1
          </span>
          <div
            class="c13 c14"
            tabindex="-1"
          >
            <div
              class="c15"
              style="flex: 0 0 0px;"
            />
            <div
              class="c16"
              style="flex: 0 0 1px;"
            >
              <input
                aria-label="Lower Bounds"
                aria-valuemax="4.9"
                aria-valuemin="2.1"
                aria-valuenow="2.1"
                class="c17"
                max="4.9"
                min="2.1"
                readonly=""
                step="0.14"
                type="range"
                value="2.1"
              />
              <div
                class="c18"
                style="cursor: col-resize; outline: none; min-width: 12px; min-height: 12px; z-index: 1;"
                tabindex="-1"
              >
                <div
                  class="c19 EdgeControl__StyledBox-sc-1xo2yt9-1"
                />
              </div>
            </div>
            <div
              class="c20"
              style="flex: 3.8000000000000003 0 0px; cursor: ew-resize;"
            />
            <div
              class="c16"
              style="flex: 0 0 1px;"
            >
              <input
                aria-label="Upper Bounds"
                aria-valuemax="4.9"
                aria-valuemin="2.1"
                aria-valuenow="4.9"
                class="c17"
                max="4.9"
                min="2.1"
                readonly=""
                step="0.14"
                type="range"
                value="4.9"
              />
              <div
                class="c18"
                style="cursor: col-resize; outline: none; min-width: 12px; min-height: 12px; z-index: 1;"
                tabindex="-1"
              >
                <div
                  class="c19 EdgeControl__StyledBox-sc-1xo2yt9-1"
                />
              </div>
            </div>
            <div
              class="c15"
              style="flex: 0 0 0px;"
            />
          </div>
          <span
            class="c21"
            style="width: 0px;"
          >
            4.9
          </span>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`DataFilter children 1`] = `
.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 100%;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 1 1;
  overflow: auto;
}

.c5 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-bottom: 0px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c8 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-top: 6px;
  margin-bottom: 6px;
  border: solid 1px rgba(0, 0, 0, 0.36);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  border-radius: 8px;
}

.c11 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-top: 24px;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 0 0 auto;
  justify-content: space-between;
}

.c7 {
  margin-left: 0px;
  margin-right: 0px;
  margin-top: 6px;
  margin-bottom: 6px;
  margin-top: 6px;
  margin-bottom: 0px;
  font-size: 0.875rem;
  line-height: 1rem;
  color: #2e2e2e;
  font-weight: 500;
}

.c12 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: none;
  border-radius: 9999px;
  padding: 5px 18px;
  font-size: 1.125rem;
  line-height: 1.5rem;
  background-color: #008567;
  color: #ffffff;
  border-style: solid;
  border-width: 1px;
  border-color: rgba(0, 0, 0, 0);
  border-radius: 9999px;
  font-weight: 600;
  padding: 5px 18px;
  text-align: center;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c12:hover {
  background-color: rgba(0, 103, 80, 1);
  color: #ffffff;
  border-color: rgba(0, 0, 0, 0);
  font-weight: 600;
}

.c12:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 0px 2px #ffffff;
}

.c12:focus >circle,
.c12:focus >ellipse,
.c12:focus >line,
.c12:focus >path,
.c12:focus >polygon,
.c12:focus >polyline,
.c12:focus >rect {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 0px 2px #ffffff;
}

.c12:focus ::-moz-focus-inner {
  border: 0;
}

.c12:focus:not(:focus-visible) {
  outline-offset: 0px;
  outline: none;
  outline: none;
  box-shadow: none;
}

.c12:focus:not(:focus-visible) >circle,
.c12:focus:not(:focus-visible) >ellipse,
.c12:focus:not(:focus-visible) >line,
.c12:focus:not(:focus-visible) >path,
.c12:focus:not(:focus-visible) >polygon,
.c12:focus:not(:focus-visible) >polyline,
.c12:focus:not(:focus-visible) >rect {
  outline-offset: 0px;
  outline: none;
  outline: none;
  box-shadow: none;
}

.c12:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c2 {
  max-width: 100%;
}

.c10 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  line-height: inherit;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 5px;
  padding-bottom: 5px;
  font-weight: 400;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.36);
  border-radius: 8px;
  color: #2e2e2e;
  outline: none;
  border: none;
}

.c10::-webkit-input-placeholder {
  color: #676767;
}

.c10::-moz-placeholder {
  color: #676767;
}

.c10:-ms-input-placeholder {
  color: #676767;
}

.c10 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c10::-moz-focus-inner {
  border: none;
  outline: none;
}

.c10:-moz-placeholder,
.c10::-moz-placeholder {
  opacity: 1;
}

.c10::-webkit-input-placeholder {
  font-weight: 400;
}

.c10::-moz-placeholder {
  font-weight: 400;
}

.c10:-ms-input-placeholder {
  font-weight: 400;
}

.c9 {
  position: relative;
  width: 100%;
}

.c9 svg {
  fill: #2e2e2e;
  stroke: #2e2e2e;
}

.c6 [class*="ContentBox"] label {
  padding-block: 5px;
  padding-inline: 8px;
}

.c6 [class*="ContentBox"] label:hover:not([disabled]) {
  background: rgba(0, 0, 0, 0);
}

.c6 [class*="ContentBox"] [role="group"],
.c6 [class*="ContentBox"] [role="radiogroup"] {
  gap: 0;
  padding-block: 0px;
  padding-inline: none;
}

.c6 [class*="ContentBox"] [role="group"] label,
.c6 [class*="ContentBox"] [role="radiogroup"] label {
  border: 1px solid rgba(0, 0, 0, 0);
  padding-block: 5px;
  padding-inline: 8px;
  border-radius: 6px;
}

.c6 [class*="ContentBox"] [role="group"] label:hover:not([disabled]),
.c6 [class*="ContentBox"] [role="radiogroup"] label:hover:not([disabled]) {
  background: rgba(0, 0, 0, 0.04);
}

.c0 {
  font-family: 'Metric',Arial,sans-serif;
  font-size: 1.125rem;
  line-height: 1.5rem;
  background-color: #ffffff;
  color: #555555;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

@media only screen and (max-width: 768px) {
  .c5 {
    margin-bottom: 0px;
  }
}

@media only screen and (max-width: 768px) {
  .c8 {
    margin-top: 3px;
    margin-bottom: 3px;
  }
}

@media only screen and (max-width: 768px) {
  .c8 {
    border: solid 1px rgba(0, 0, 0, 0.36);
  }
}

@media only screen and (max-width: 768px) {
  .c11 {
    margin-top: 12px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
    id="data"
  >
    <form
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <div
            class="c1"
          >
            <div
              class="c5 c6"
            >
              <label
                class="c7"
                for="data-name"
                id="grommet-data-name__label"
              >
                name
              </label>
              <div
                class="c8 "
              >
                <div
                  class="c9"
                >
                  <input
                    autocomplete="off"
                    class="c10"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <footer
          class="c11"
        >
          <button
            class="c12"
            type="submit"
          >
            Apply filters
          </button>
        </footer>
      </div>
    </form>
  </div>
</div>
`;

exports[`DataFilter options 1`] = `
.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 100%;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 1 1;
  overflow: auto;
}

.c5 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-bottom: 0px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c8 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-top: 6px;
  margin-bottom: 6px;
  border: solid 1px rgba(0, 0, 0, 0.36);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  padding: 0px;
  border-radius: 8px;
}

.c10 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin: 0px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  row-gap: 12px;
}

.c12 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-right: 12px;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  justify-content: center;
}

.c15 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  border: solid 1px rgba(0, 0, 0, 0.36);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 24px;
  width: 24px;
  justify-content: center;
  border-radius: 6px;
}

.c17 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-top: 24px;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 0 0 auto;
  justify-content: space-between;
}

.c7 {
  margin-left: 0px;
  margin-right: 0px;
  margin-top: 6px;
  margin-bottom: 6px;
  margin-top: 6px;
  margin-bottom: 0px;
  font-size: 0.875rem;
  line-height: 1rem;
  color: #2e2e2e;
  font-weight: 500;
}

.c18 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: none;
  border-radius: 9999px;
  padding: 5px 18px;
  font-size: 1.125rem;
  line-height: 1.5rem;
  background-color: #008567;
  color: #ffffff;
  border-style: solid;
  border-width: 1px;
  border-color: rgba(0, 0, 0, 0);
  border-radius: 9999px;
  font-weight: 600;
  padding: 5px 18px;
  text-align: center;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c18:hover {
  background-color: rgba(0, 103, 80, 1);
  color: #ffffff;
  border-color: rgba(0, 0, 0, 0);
  font-weight: 600;
}

.c18:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 0px 2px #ffffff;
}

.c18:focus >circle,
.c18:focus >ellipse,
.c18:focus >line,
.c18:focus >path,
.c18:focus >polygon,
.c18:focus >polyline,
.c18:focus >rect {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 0px 2px #ffffff;
}

.c18:focus ::-moz-focus-inner {
  border: 0;
}

.c18:focus:not(:focus-visible) {
  outline-offset: 0px;
  outline: none;
  outline: none;
  box-shadow: none;
}

.c18:focus:not(:focus-visible) >circle,
.c18:focus:not(:focus-visible) >ellipse,
.c18:focus:not(:focus-visible) >line,
.c18:focus:not(:focus-visible) >path,
.c18:focus:not(:focus-visible) >polygon,
.c18:focus:not(:focus-visible) >polyline,
.c18:focus:not(:focus-visible) >rect {
  outline-offset: 0px;
  outline: none;
  outline: none;
  box-shadow: none;
}

.c18:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c2 {
  max-width: 100%;
}

.c11 {
  display: flex;
  flex-direction: row;
  align-items: start;
  user-select: none;
  -webkit-user-select: none;
  width: fit-content;
  padding: 0px;
  cursor: pointer;
  font-weight: 400;
  width: auto;
  border: 1px solid rgba(0, 0, 0, 0);
}

.c11 input:checked+span[class*=CheckBoxToggle]>span[class*=CheckBoxKnob] {
  left: 25px;
}

.c14 {
  opacity: 0;
  -moz-appearance: none;
  width: 0;
  height: 0;
  margin: 0;
  cursor: pointer;
}

.c14:checked+span>span {
  left: calc( 48px - 24px );
  background: #ffffff;
}

.c16 {
  background: rgba(0, 0, 0, 0);
  border-color: rgba(0, 0, 0, 0.36);
}

.c16:hover {
  background: rgba(0, 0, 0, 0.04);
}

.c13 {
  flex-shrink: 0;
}

.c6 [class*="ContentBox"] label {
  padding-block: 5px;
  padding-inline: 8px;
}

.c6 [class*="ContentBox"] label:hover:not([disabled]) {
  background: rgba(0, 0, 0, 0);
}

.c6 [class*="ContentBox"] [role="group"],
.c6 [class*="ContentBox"] [role="radiogroup"] {
  gap: 0;
  padding-block: 0px;
  padding-inline: none;
}

.c6 [class*="ContentBox"] [role="group"] label,
.c6 [class*="ContentBox"] [role="radiogroup"] label {
  border: 1px solid rgba(0, 0, 0, 0);
  padding-block: 5px;
  padding-inline: 8px;
  border-radius: 6px;
}

.c6 [class*="ContentBox"] [role="group"] label:hover:not([disabled]),
.c6 [class*="ContentBox"] [role="radiogroup"] label:hover:not([disabled]) {
  background: rgba(0, 0, 0, 0.04);
}

.c9 {
  border-color: transparent;
}

.c0 {
  font-family: 'Metric',Arial,sans-serif;
  font-size: 1.125rem;
  line-height: 1.5rem;
  background-color: #ffffff;
  color: #555555;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

@media only screen and (max-width: 768px) {
  .c5 {
    margin-bottom: 0px;
  }
}

@media only screen and (max-width: 768px) {
  .c8 {
    margin-top: 3px;
    margin-bottom: 3px;
  }
}

@media only screen and (max-width: 768px) {
  .c8 {
    border: solid 1px rgba(0, 0, 0, 0.36);
  }
}

@media only screen and (max-width: 768px) {
  .c8 {
    padding: 0px;
  }
}

@media only screen and (max-width: 768px) {
  .c10 {
    margin: 0px;
  }
}

@media only screen and (max-width: 768px) {
  .c10 {
    row-gap: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c12 {
    margin-right: 12px;
  }
}

@media only screen and (max-width: 768px) {
  .c15 {
    border: solid 1px rgba(0, 0, 0, 0.36);
  }
}

@media only screen and (max-width: 768px) {
  .c17 {
    margin-top: 12px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
    id="data"
  >
    <form
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <div
            class="c1"
          >
            <div
              class="c5 c6"
            >
              <label
                class="c7"
                for="data-name"
                id="grommet-data-name__label"
              >
                name
              </label>
              <div
                class="c8 c9"
              >
                <div
                  aria-labelledby="grommet-data-name__label"
                  class="c10 StyledCheckBoxGroup-sc-2nhc5d-0"
                  id="data-name"
                  role="group"
                >
                  <label
                    class="c11"
                  >
                    <div
                      class="c12 c13"
                    >
                      <input
                        class="c14"
                        type="checkbox"
                      />
                      <div
                        class="c15 c16"
                      />
                    </div>
                    <span>
                      aa
                    </span>
                  </label>
                  <label
                    class="c11"
                  >
                    <div
                      class="c12 c13"
                    >
                      <input
                        class="c14"
                        type="checkbox"
                      />
                      <div
                        class="c15 c16"
                      />
                    </div>
                    <span>
                      bb
                    </span>
                  </label>
                  <label
                    class="c11"
                  >
                    <div
                      class="c12 c13"
                    >
                      <input
                        class="c14"
                        type="checkbox"
                      />
                      <div
                        class="c15 c16"
                      />
                    </div>
                    <span>
                      cc
                    </span>
                  </label>
                </div>
              </div>
            </div>
            <div
              class="c5 c6"
            >
              <label
                class="c7"
                for="data-enabled"
                id="grommet-data-enabled__label"
              >
                Enabled
              </label>
              <div
                class="c8 c9"
              >
                <div
                  aria-labelledby="grommet-data-enabled__label"
                  class="c10 StyledCheckBoxGroup-sc-2nhc5d-0"
                  id="data-enabled"
                  role="group"
                >
                  <label
                    class="c11"
                  >
                    <div
                      class="c12 c13"
                    >
                      <input
                        class="c14"
                        type="checkbox"
                      />
                      <div
                        class="c15 c16"
                      />
                    </div>
                    <span>
                      Enabled
                    </span>
                  </label>
                  <label
                    class="c11"
                  >
                    <div
                      class="c12 c13"
                    >
                      <input
                        class="c14"
                        type="checkbox"
                      />
                      <div
                        class="c15 c16"
                      />
                    </div>
                    <span>
                      Disabled
                    </span>
                  </label>
                </div>
              </div>
            </div>
            <div
              class="c5 c6"
            >
              <label
                class="c7"
                for="data-type.name"
                id="grommet-data-type.name__label"
              >
                Type
              </label>
              <div
                class="c8 c9"
              >
                <div
                  aria-labelledby="grommet-data-type.name__label"
                  class="c10 StyledCheckBoxGroup-sc-2nhc5d-0"
                  id="data-type.name"
                  role="group"
                >
                  <label
                    class="c11"
                  >
                    <div
                      class="c12 c13"
                    >
                      <input
                        class="c14"
                        type="checkbox"
                      />
                      <div
                        class="c15 c16"
                      />
                    </div>
                    <span>
                      ZZ
                    </span>
                  </label>
                  <label
                    class="c11"
                  >
                    <div
                      class="c12 c13"
                    >
                      <input
                        class="c14"
                        type="checkbox"
                      />
                      <div
                        class="c15 c16"
                      />
                    </div>
                    <span>
                      YY
                    </span>
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
        <footer
          class="c17"
        >
          <button
            class="c18"
            type="submit"
          >
            Apply filters
          </button>
        </footer>
      </div>
    </form>
  </div>
</div>
`;

exports[`DataFilter range Data 1`] = `
.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 100%;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 1 1;
  overflow: auto;
}

.c5 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-bottom: 0px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c8 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-top: 6px;
  margin-bottom: 6px;
  border: solid 1px rgba(0, 0, 0, 0.36);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  padding: 0px;
  border-radius: 8px;
}

.c9 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  width: 100%;
  height: 100%;
}

.c11 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.c13 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-self: stretch;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  width: 100%;
  border-radius: 12px;
}

.c14 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-self: stretch;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  justify-content: center;
  overflow: visible;
}

.c16 {
  display: flex;
  box-sizing: border-box;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex-basis: 100%;
  height: 100%;
  justify-content: center;
}

.c17 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #008567;
  color: #ffffff;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 12px;
  width: 12px;
  border-radius: 100%;
}

.c18 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-self: stretch;
  background-color: rgba(0, 133, 103, 0.4);
  color: #555555;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  width: 100%;
  border-radius: 12px;
}

.c20 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-top: 24px;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 0 0 auto;
  justify-content: space-between;
}

.c7 {
  margin-left: 0px;
  margin-right: 0px;
  margin-top: 6px;
  margin-bottom: 6px;
  margin-top: 6px;
  margin-bottom: 0px;
  font-size: 0.875rem;
  line-height: 1rem;
  color: #2e2e2e;
  font-weight: 500;
}

.c10 {
  margin-left: 12px;
  margin-right: 12px;
  font-size: 1rem;
  line-height: 1.25rem;
  text-align: right;
  font-weight: 400;
}

.c19 {
  margin-left: 12px;
  margin-right: 12px;
  font-size: 1rem;
  line-height: 1.25rem;
  font-weight: 400;
}

.c21 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: none;
  border-radius: 9999px;
  padding: 5px 18px;
  font-size: 1.125rem;
  line-height: 1.5rem;
  background-color: #008567;
  color: #ffffff;
  border-style: solid;
  border-width: 1px;
  border-color: rgba(0, 0, 0, 0);
  border-radius: 9999px;
  font-weight: 600;
  padding: 5px 18px;
  text-align: center;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c21:hover {
  background-color: rgba(0, 103, 80, 1);
  color: #ffffff;
  border-color: rgba(0, 0, 0, 0);
  font-weight: 600;
}

.c21:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 0px 2px #ffffff;
}

.c21:focus >circle,
.c21:focus >ellipse,
.c21:focus >line,
.c21:focus >path,
.c21:focus >polygon,
.c21:focus >polyline,
.c21:focus >rect {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 0px 2px #ffffff;
}

.c21:focus ::-moz-focus-inner {
  border: 0;
}

.c21:focus:not(:focus-visible) {
  outline-offset: 0px;
  outline: none;
  outline: none;
  box-shadow: none;
}

.c21:focus:not(:focus-visible) >circle,
.c21:focus:not(:focus-visible) >ellipse,
.c21:focus:not(:focus-visible) >line,
.c21:focus:not(:focus-visible) >path,
.c21:focus:not(:focus-visible) >polygon,
.c21:focus:not(:focus-visible) >polyline,
.c21:focus:not(:focus-visible) >rect {
  outline-offset: 0px;
  outline: none;
  outline: none;
  box-shadow: none;
}

.c21:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c2 {
  max-width: 100%;
}

.c6 [class*="ContentBox"] label {
  padding-block: 5px;
  padding-inline: 8px;
}

.c6 [class*="ContentBox"] label:hover:not([disabled]) {
  background: rgba(0, 0, 0, 0);
}

.c6 [class*="ContentBox"] [role="group"],
.c6 [class*="ContentBox"] [role="radiogroup"] {
  gap: 0;
  padding-block: 0px;
  padding-inline: none;
}

.c6 [class*="ContentBox"] [role="group"] label,
.c6 [class*="ContentBox"] [role="radiogroup"] label {
  border: 1px solid rgba(0, 0, 0, 0);
  padding-block: 5px;
  padding-inline: 8px;
  border-radius: 6px;
}

.c6 [class*="ContentBox"] [role="group"] label:hover:not([disabled]),
.c6 [class*="ContentBox"] [role="radiogroup"] label:hover:not([disabled]) {
  background: rgba(0, 0, 0, 0.04);
}

.c15 {
  position: absolute;
  clip: rect(0 0 0 0);
  clip-path: inset(50%);
  height: 1px;
  overflow: hidden;
  white-space: nowrap;
  width: 1px;
}

.c12 {
  user-select: none;
}

.c0 {
  font-family: 'Metric',Arial,sans-serif;
  font-size: 1.125rem;
  line-height: 1.5rem;
  background-color: #ffffff;
  color: #555555;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

@media only screen and (max-width: 768px) {
  .c5 {
    margin-bottom: 0px;
  }
}

@media only screen and (max-width: 768px) {
  .c8 {
    margin-top: 3px;
    margin-bottom: 3px;
  }
}

@media only screen and (max-width: 768px) {
  .c8 {
    border: solid 1px rgba(0, 0, 0, 0.36);
  }
}

@media only screen and (max-width: 768px) {
  .c8 {
    padding: 0px;
  }
}

@media only screen and (max-width: 768px) {
  .c13 {
    border-radius: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c18 {
    border-radius: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c20 {
    margin-top: 12px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
    id="data"
  >
    <form
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <div
            class="c1"
          >
            <div
              class="c5 c6"
            >
              <label
                class="c7"
                for="data-rating"
                id="grommet-data-rating__label"
              >
                Rating
              </label>
              <div
                class="c8 "
              >
                <div
                  class="c9"
                  id="data-rating"
                >
                  <span
                    class="c10"
                    style="width: 0px;"
                  >
                    0
                  </span>
                  <div
                    class="c11 c12"
                    tabindex="-1"
                  >
                    <div
                      class="c13"
                      style="flex: 0 0 0px;"
                    />
                    <div
                      class="c14"
                      style="flex: 0 0 1px;"
                    >
                      <input
                        aria-label="Lower Bounds"
                        aria-valuemax="5"
                        aria-valuemin="0"
                        aria-valuenow="0"
                        class="c15"
                        max="5"
                        min="0"
                        readonly=""
                        step="0.25"
                        type="range"
                        value="0"
                      />
                      <div
                        class="c16"
                        style="cursor: col-resize; outline: none; min-width: 12px; min-height: 12px; z-index: 1;"
                        tabindex="-1"
                      >
                        <div
                          class="c17 EdgeControl__StyledBox-sc-1xo2yt9-1"
                        />
                      </div>
                    </div>
                    <div
                      class="c18"
                      style="flex: 6 0 0px; cursor: ew-resize;"
                    />
                    <div
                      class="c14"
                      style="flex: 0 0 1px;"
                    >
                      <input
                        aria-label="Upper Bounds"
                        aria-valuemax="5"
                        aria-valuemin="0"
                        aria-valuenow="5"
                        class="c15"
                        max="5"
                        min="0"
                        readonly=""
                        step="0.25"
                        type="range"
                        value="5"
                      />
                      <div
                        class="c16"
                        style="cursor: col-resize; outline: none; min-width: 12px; min-height: 12px; z-index: 1;"
                        tabindex="-1"
                      >
                        <div
                          class="c17 EdgeControl__StyledBox-sc-1xo2yt9-1"
                        />
                      </div>
                    </div>
                    <div
                      class="c13"
                      style="flex: 0 0 0px;"
                    />
                  </div>
                  <span
                    class="c19"
                    style="width: 0px;"
                  >
                    5
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <footer
          class="c20"
        >
          <button
            class="c21"
            type="submit"
          >
            Apply filters
          </button>
        </footer>
      </div>
    </form>
  </div>
</div>
`;

exports[`DataFilter range prop 1`] = `
.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 100%;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 1 1;
  overflow: auto;
}

.c5 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-bottom: 0px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c8 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-top: 6px;
  margin-bottom: 6px;
  border: solid 1px rgba(0, 0, 0, 0.36);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  padding: 0px;
  border-radius: 8px;
}

.c9 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  width: 100%;
  height: 100%;
}

.c11 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.c13 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-self: stretch;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  width: 100%;
  border-radius: 12px;
}

.c14 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-self: stretch;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  justify-content: center;
  overflow: visible;
}

.c16 {
  display: flex;
  box-sizing: border-box;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex-basis: 100%;
  height: 100%;
  justify-content: center;
}

.c17 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #008567;
  color: #ffffff;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 12px;
  width: 12px;
  border-radius: 100%;
}

.c18 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-self: stretch;
  background-color: rgba(0, 133, 103, 0.4);
  color: #555555;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  width: 100%;
  border-radius: 12px;
}

.c20 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-top: 24px;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 0 0 auto;
  justify-content: space-between;
}

.c7 {
  margin-left: 0px;
  margin-right: 0px;
  margin-top: 6px;
  margin-bottom: 6px;
  margin-top: 6px;
  margin-bottom: 0px;
  font-size: 0.875rem;
  line-height: 1rem;
  color: #2e2e2e;
  font-weight: 500;
}

.c10 {
  margin-left: 12px;
  margin-right: 12px;
  font-size: 1rem;
  line-height: 1.25rem;
  text-align: right;
  font-weight: 400;
}

.c19 {
  margin-left: 12px;
  margin-right: 12px;
  font-size: 1rem;
  line-height: 1.25rem;
  font-weight: 400;
}

.c21 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: none;
  border-radius: 9999px;
  padding: 5px 18px;
  font-size: 1.125rem;
  line-height: 1.5rem;
  background-color: #008567;
  color: #ffffff;
  border-style: solid;
  border-width: 1px;
  border-color: rgba(0, 0, 0, 0);
  border-radius: 9999px;
  font-weight: 600;
  padding: 5px 18px;
  text-align: center;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c21:hover {
  background-color: rgba(0, 103, 80, 1);
  color: #ffffff;
  border-color: rgba(0, 0, 0, 0);
  font-weight: 600;
}

.c21:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 0px 2px #ffffff;
}

.c21:focus >circle,
.c21:focus >ellipse,
.c21:focus >line,
.c21:focus >path,
.c21:focus >polygon,
.c21:focus >polyline,
.c21:focus >rect {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 0px 2px #ffffff;
}

.c21:focus ::-moz-focus-inner {
  border: 0;
}

.c21:focus:not(:focus-visible) {
  outline-offset: 0px;
  outline: none;
  outline: none;
  box-shadow: none;
}

.c21:focus:not(:focus-visible) >circle,
.c21:focus:not(:focus-visible) >ellipse,
.c21:focus:not(:focus-visible) >line,
.c21:focus:not(:focus-visible) >path,
.c21:focus:not(:focus-visible) >polygon,
.c21:focus:not(:focus-visible) >polyline,
.c21:focus:not(:focus-visible) >rect {
  outline-offset: 0px;
  outline: none;
  outline: none;
  box-shadow: none;
}

.c21:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c2 {
  max-width: 100%;
}

.c6 [class*="ContentBox"] label {
  padding-block: 5px;
  padding-inline: 8px;
}

.c6 [class*="ContentBox"] label:hover:not([disabled]) {
  background: rgba(0, 0, 0, 0);
}

.c6 [class*="ContentBox"] [role="group"],
.c6 [class*="ContentBox"] [role="radiogroup"] {
  gap: 0;
  padding-block: 0px;
  padding-inline: none;
}

.c6 [class*="ContentBox"] [role="group"] label,
.c6 [class*="ContentBox"] [role="radiogroup"] label {
  border: 1px solid rgba(0, 0, 0, 0);
  padding-block: 5px;
  padding-inline: 8px;
  border-radius: 6px;
}

.c6 [class*="ContentBox"] [role="group"] label:hover:not([disabled]),
.c6 [class*="ContentBox"] [role="radiogroup"] label:hover:not([disabled]) {
  background: rgba(0, 0, 0, 0.04);
}

.c15 {
  position: absolute;
  clip: rect(0 0 0 0);
  clip-path: inset(50%);
  height: 1px;
  overflow: hidden;
  white-space: nowrap;
  width: 1px;
}

.c12 {
  user-select: none;
}

.c0 {
  font-family: 'Metric',Arial,sans-serif;
  font-size: 1.125rem;
  line-height: 1.5rem;
  background-color: #ffffff;
  color: #555555;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

@media only screen and (max-width: 768px) {
  .c5 {
    margin-bottom: 0px;
  }
}

@media only screen and (max-width: 768px) {
  .c8 {
    margin-top: 3px;
    margin-bottom: 3px;
  }
}

@media only screen and (max-width: 768px) {
  .c8 {
    border: solid 1px rgba(0, 0, 0, 0.36);
  }
}

@media only screen and (max-width: 768px) {
  .c8 {
    padding: 0px;
  }
}

@media only screen and (max-width: 768px) {
  .c13 {
    border-radius: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c18 {
    border-radius: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c20 {
    margin-top: 12px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
    id="data"
  >
    <form
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <div
            class="c1"
          >
            <div
              class="c5 c6"
            >
              <label
                class="c7"
                for="data-rating"
                id="grommet-data-rating__label"
              >
                rating
              </label>
              <div
                class="c8 "
              >
                <div
                  class="c9"
                  id="data-rating"
                >
                  <span
                    class="c10"
                    style="width: 0px;"
                  >
                    0
                  </span>
                  <div
                    class="c11 c12"
                    tabindex="-1"
                  >
                    <div
                      class="c13"
                      style="flex: 0 0 0px;"
                    />
                    <div
                      class="c14"
                      style="flex: 0 0 1px;"
                    >
                      <input
                        aria-label="Lower Bounds"
                        aria-valuemax="5"
                        aria-valuemin="0"
                        aria-valuenow="0"
                        class="c15"
                        max="5"
                        min="0"
                        readonly=""
                        step="0.25"
                        type="range"
                        value="0"
                      />
                      <div
                        class="c16"
                        style="cursor: col-resize; outline: none; min-width: 12px; min-height: 12px; z-index: 1;"
                        tabindex="-1"
                      >
                        <div
                          class="c17 EdgeControl__StyledBox-sc-1xo2yt9-1"
                        />
                      </div>
                    </div>
                    <div
                      class="c18"
                      style="flex: 6 0 0px; cursor: ew-resize;"
                    />
                    <div
                      class="c14"
                      style="flex: 0 0 1px;"
                    >
                      <input
                        aria-label="Upper Bounds"
                        aria-valuemax="5"
                        aria-valuemin="0"
                        aria-valuenow="5"
                        class="c15"
                        max="5"
                        min="0"
                        readonly=""
                        step="0.25"
                        type="range"
                        value="5"
                      />
                      <div
                        class="c16"
                        style="cursor: col-resize; outline: none; min-width: 12px; min-height: 12px; z-index: 1;"
                        tabindex="-1"
                      >
                        <div
                          class="c17 EdgeControl__StyledBox-sc-1xo2yt9-1"
                        />
                      </div>
                    </div>
                    <div
                      class="c13"
                      style="flex: 0 0 0px;"
                    />
                  </div>
                  <span
                    class="c19"
                    style="width: 0px;"
                  >
                    5
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <footer
          class="c20"
        >
          <button
            class="c21"
            type="submit"
          >
            Apply filters
          </button>
        </footer>
      </div>
    </form>
  </div>
</div>
`;

exports[`DataFilter renders 1`] = `
.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 100%;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 1 1;
  overflow: auto;
}

.c5 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-bottom: 0px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c8 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-top: 6px;
  margin-bottom: 6px;
  border: solid 1px rgba(0, 0, 0, 0.36);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  padding: 0px;
  border-radius: 8px;
}

.c10 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin: 0px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  row-gap: 12px;
}

.c12 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-right: 12px;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  justify-content: center;
}

.c15 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  border: solid 1px rgba(0, 0, 0, 0.36);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 24px;
  width: 24px;
  justify-content: center;
  border-radius: 6px;
}

.c17 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  width: 100%;
  height: 100%;
}

.c19 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.c21 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-self: stretch;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  width: 100%;
  border-radius: 12px;
}

.c22 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-self: stretch;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  justify-content: center;
  overflow: visible;
}

.c24 {
  display: flex;
  box-sizing: border-box;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex-basis: 100%;
  height: 100%;
  justify-content: center;
}

.c25 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #008567;
  color: #ffffff;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 12px;
  width: 12px;
  border-radius: 100%;
}

.c26 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-self: stretch;
  background-color: rgba(0, 133, 103, 0.4);
  color: #555555;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  width: 100%;
  border-radius: 12px;
}

.c28 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-top: 24px;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 0 0 auto;
  justify-content: space-between;
}

.c7 {
  margin-left: 0px;
  margin-right: 0px;
  margin-top: 6px;
  margin-bottom: 6px;
  margin-top: 6px;
  margin-bottom: 0px;
  font-size: 0.875rem;
  line-height: 1rem;
  color: #2e2e2e;
  font-weight: 500;
}

.c18 {
  margin-left: 12px;
  margin-right: 12px;
  font-size: 1rem;
  line-height: 1.25rem;
  text-align: right;
  font-weight: 400;
}

.c27 {
  margin-left: 12px;
  margin-right: 12px;
  font-size: 1rem;
  line-height: 1.25rem;
  font-weight: 400;
}

.c29 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: none;
  border-radius: 9999px;
  padding: 5px 18px;
  font-size: 1.125rem;
  line-height: 1.5rem;
  background-color: #008567;
  color: #ffffff;
  border-style: solid;
  border-width: 1px;
  border-color: rgba(0, 0, 0, 0);
  border-radius: 9999px;
  font-weight: 600;
  padding: 5px 18px;
  text-align: center;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c29:hover {
  background-color: rgba(0, 103, 80, 1);
  color: #ffffff;
  border-color: rgba(0, 0, 0, 0);
  font-weight: 600;
}

.c29:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 0px 2px #ffffff;
}

.c29:focus >circle,
.c29:focus >ellipse,
.c29:focus >line,
.c29:focus >path,
.c29:focus >polygon,
.c29:focus >polyline,
.c29:focus >rect {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 0px 2px #ffffff;
}

.c29:focus ::-moz-focus-inner {
  border: 0;
}

.c29:focus:not(:focus-visible) {
  outline-offset: 0px;
  outline: none;
  outline: none;
  box-shadow: none;
}

.c29:focus:not(:focus-visible) >circle,
.c29:focus:not(:focus-visible) >ellipse,
.c29:focus:not(:focus-visible) >line,
.c29:focus:not(:focus-visible) >path,
.c29:focus:not(:focus-visible) >polygon,
.c29:focus:not(:focus-visible) >polyline,
.c29:focus:not(:focus-visible) >rect {
  outline-offset: 0px;
  outline: none;
  outline: none;
  box-shadow: none;
}

.c29:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c2 {
  max-width: 100%;
}

.c11 {
  display: flex;
  flex-direction: row;
  align-items: start;
  user-select: none;
  -webkit-user-select: none;
  width: fit-content;
  padding: 0px;
  cursor: pointer;
  font-weight: 400;
  width: auto;
  border: 1px solid rgba(0, 0, 0, 0);
}

.c11 input:checked+span[class*=CheckBoxToggle]>span[class*=CheckBoxKnob] {
  left: 25px;
}

.c14 {
  opacity: 0;
  -moz-appearance: none;
  width: 0;
  height: 0;
  margin: 0;
  cursor: pointer;
}

.c14:checked+span>span {
  left: calc( 48px - 24px );
  background: #ffffff;
}

.c16 {
  background: rgba(0, 0, 0, 0);
  border-color: rgba(0, 0, 0, 0.36);
}

.c16:hover {
  background: rgba(0, 0, 0, 0.04);
}

.c13 {
  flex-shrink: 0;
}

.c6 [class*="ContentBox"] label {
  padding-block: 5px;
  padding-inline: 8px;
}

.c6 [class*="ContentBox"] label:hover:not([disabled]) {
  background: rgba(0, 0, 0, 0);
}

.c6 [class*="ContentBox"] [role="group"],
.c6 [class*="ContentBox"] [role="radiogroup"] {
  gap: 0;
  padding-block: 0px;
  padding-inline: none;
}

.c6 [class*="ContentBox"] [role="group"] label,
.c6 [class*="ContentBox"] [role="radiogroup"] label {
  border: 1px solid rgba(0, 0, 0, 0);
  padding-block: 5px;
  padding-inline: 8px;
  border-radius: 6px;
}

.c6 [class*="ContentBox"] [role="group"] label:hover:not([disabled]),
.c6 [class*="ContentBox"] [role="radiogroup"] label:hover:not([disabled]) {
  background: rgba(0, 0, 0, 0.04);
}

.c9 {
  border-color: transparent;
}

.c23 {
  position: absolute;
  clip: rect(0 0 0 0);
  clip-path: inset(50%);
  height: 1px;
  overflow: hidden;
  white-space: nowrap;
  width: 1px;
}

.c20 {
  user-select: none;
}

.c0 {
  font-family: 'Metric',Arial,sans-serif;
  font-size: 1.125rem;
  line-height: 1.5rem;
  background-color: #ffffff;
  color: #555555;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

@media only screen and (max-width: 768px) {
  .c5 {
    margin-bottom: 0px;
  }
}

@media only screen and (max-width: 768px) {
  .c8 {
    margin-top: 3px;
    margin-bottom: 3px;
  }
}

@media only screen and (max-width: 768px) {
  .c8 {
    border: solid 1px rgba(0, 0, 0, 0.36);
  }
}

@media only screen and (max-width: 768px) {
  .c8 {
    padding: 0px;
  }
}

@media only screen and (max-width: 768px) {
  .c10 {
    margin: 0px;
  }
}

@media only screen and (max-width: 768px) {
  .c10 {
    row-gap: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c12 {
    margin-right: 12px;
  }
}

@media only screen and (max-width: 768px) {
  .c15 {
    border: solid 1px rgba(0, 0, 0, 0.36);
  }
}

@media only screen and (max-width: 768px) {
  .c21 {
    border-radius: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c26 {
    border-radius: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c28 {
    margin-top: 12px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
    id="data"
  >
    <form
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <div
            class="c1"
          >
            <div
              class="c5 c6"
            >
              <label
                class="c7"
                for="data-name"
                id="grommet-data-name__label"
              >
                name
              </label>
              <div
                class="c8 c9"
              >
                <div
                  aria-labelledby="grommet-data-name__label"
                  class="c10 StyledCheckBoxGroup-sc-2nhc5d-0"
                  id="data-name"
                  role="group"
                >
                  <label
                    class="c11"
                  >
                    <div
                      class="c12 c13"
                    >
                      <input
                        class="c14"
                        type="checkbox"
                      />
                      <div
                        class="c15 c16"
                      />
                    </div>
                    <span>
                      aa
                    </span>
                  </label>
                  <label
                    class="c11"
                  >
                    <div
                      class="c12 c13"
                    >
                      <input
                        class="c14"
                        type="checkbox"
                      />
                      <div
                        class="c15 c16"
                      />
                    </div>
                    <span>
                      bb
                    </span>
                  </label>
                  <label
                    class="c11"
                  >
                    <div
                      class="c12 c13"
                    >
                      <input
                        class="c14"
                        type="checkbox"
                      />
                      <div
                        class="c15 c16"
                      />
                    </div>
                    <span>
                      cc
                    </span>
                  </label>
                </div>
              </div>
            </div>
            <div
              class="c5 c6"
            >
              <label
                class="c7"
                for="data-enabled"
                id="grommet-data-enabled__label"
              >
                enabled
              </label>
              <div
                class="c8 c9"
              >
                <div
                  aria-labelledby="grommet-data-enabled__label"
                  class="c10 StyledCheckBoxGroup-sc-2nhc5d-0"
                  id="data-enabled"
                  role="group"
                >
                  <label
                    class="c11"
                  >
                    <div
                      class="c12 c13"
                    >
                      <input
                        class="c14"
                        type="checkbox"
                      />
                      <div
                        class="c15 c16"
                      />
                    </div>
                    <span>
                      true
                    </span>
                  </label>
                  <label
                    class="c11"
                  >
                    <div
                      class="c12 c13"
                    >
                      <input
                        class="c14"
                        type="checkbox"
                      />
                      <div
                        class="c15 c16"
                      />
                    </div>
                    <span>
                      false
                    </span>
                  </label>
                </div>
              </div>
            </div>
            <div
              class="c5 c6"
            >
              <label
                class="c7"
                for="data-rating"
                id="grommet-data-rating__label"
              >
                rating
              </label>
              <div
                class="c8 "
              >
                <div
                  class="c17"
                  id="data-rating"
                >
                  <span
                    class="c18"
                    style="width: 0px;"
                  >
                    2.1
                  </span>
                  <div
                    class="c19 c20"
                    tabindex="-1"
                  >
                    <div
                      class="c21"
                      style="flex: 0 0 0px;"
                    />
                    <div
                      class="c22"
                      style="flex: 0 0 1px;"
                    >
                      <input
                        aria-label="Lower Bounds"
                        aria-valuemax="4.9"
                        aria-valuemin="2.1"
                        aria-valuenow="2.1"
                        class="c23"
                        max="4.9"
                        min="2.1"
                        readonly=""
                        step="0.14"
                        type="range"
                        value="2.1"
                      />
                      <div
                        class="c24"
                        style="cursor: col-resize; outline: none; min-width: 12px; min-height: 12px; z-index: 1;"
                        tabindex="-1"
                      >
                        <div
                          class="c25 EdgeControl__StyledBox-sc-1xo2yt9-1"
                        />
                      </div>
                    </div>
                    <div
                      class="c26"
                      style="flex: 3.8000000000000003 0 0px; cursor: ew-resize;"
                    />
                    <div
                      class="c22"
                      style="flex: 0 0 1px;"
                    >
                      <input
                        aria-label="Upper Bounds"
                        aria-valuemax="4.9"
                        aria-valuemin="2.1"
                        aria-valuenow="4.9"
                        class="c23"
                        max="4.9"
                        min="2.1"
                        readonly=""
                        step="0.14"
                        type="range"
                        value="4.9"
                      />
                      <div
                        class="c24"
                        style="cursor: col-resize; outline: none; min-width: 12px; min-height: 12px; z-index: 1;"
                        tabindex="-1"
                      >
                        <div
                          class="c25 EdgeControl__StyledBox-sc-1xo2yt9-1"
                        />
                      </div>
                    </div>
                    <div
                      class="c21"
                      style="flex: 0 0 0px;"
                    />
                  </div>
                  <span
                    class="c27"
                    style="width: 0px;"
                  >
                    4.9
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <footer
          class="c28"
        >
          <button
            class="c29"
            type="submit"
          >
            Apply filters
          </button>
        </footer>
      </div>
    </form>
  </div>
</div>
`;

exports[`DataFilter select multiple options 1`] = `
<DocumentFragment>
  .c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 0 0 auto;
}

.c8 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  background-color: #2e2e2e;
  color: #ffffff;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
  justify-content: center;
  border-radius: 24px;
}

.c10 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-inline-start: 12px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
}

.c6 {
  display: inline-block;
  flex: 0 0 auto;
  width: 18px;
  height: 18px;
  fill: #555555;
  stroke: #555555;
}

.c6 g {
  fill: inherit;
  stroke: inherit;
}

.c6 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c6 *[stroke*='#'],
.c6 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c6 *[fill-rule],
.c6 *[FILL-RULE],
.c6 *[fill*='#'],
.c6 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c3 {
  position: relative;
}

.c4 {
  position: relative;
  display: block;
}

.c7 {
  position: absolute;
  top: 0;
  right: 0;
}

.c9 {
  font-size: 0.875rem;
  line-height: 1rem;
  color: #ffffff;
  font-weight: normal;
}

.c5 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: none;
  border-radius: 9999px;
  padding: 8px 8px;
  font-size: 1.125rem;
  line-height: 0;
  background-color: rgba(0, 0, 0, 0);
  color: #555555;
  border-style: solid;
  border-width: 1px;
  border-color: rgba(0, 0, 0, 0);
  border-radius: 6px;
  font-weight: 500;
  padding: 8px 8px;
  text-align: center;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c5 >svg {
  display: flex;
  align-self: center;
  vertical-align: middle;
}

.c5:hover {
  background-color: rgba(0, 0, 0, 0.04);
  color: #555555;
  border-color: rgba(0, 0, 0, 0);
  font-weight: 500;
}

.c5:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 0px 2px #ffffff;
}

.c5:focus >circle,
.c5:focus >ellipse,
.c5:focus >line,
.c5:focus >path,
.c5:focus >polygon,
.c5:focus >polyline,
.c5:focus >rect {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 0px 2px #ffffff;
}

.c5:focus ::-moz-focus-inner {
  border: 0;
}

.c5:focus:not(:focus-visible) {
  outline-offset: 0px;
  outline: none;
  outline: none;
  box-shadow: none;
}

.c5:focus:not(:focus-visible) >circle,
.c5:focus:not(:focus-visible) >ellipse,
.c5:focus:not(:focus-visible) >line,
.c5:focus:not(:focus-visible) >path,
.c5:focus:not(:focus-visible) >polygon,
.c5:focus:not(:focus-visible) >polyline,
.c5:focus:not(:focus-visible) >rect {
  outline-offset: 0px;
  outline: none;
  outline: none;
  box-shadow: none;
}

.c5:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c11 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: none;
  border-radius: 9999px;
  padding: 5px 10px;
  font-size: 1.125rem;
  line-height: 1.5rem;
  background-color: rgba(0, 0, 0, 0);
  color: #555555;
  border-style: solid;
  border-width: 1px;
  border-color: rgba(0, 0, 0, 0);
  border-radius: 6px;
  font-weight: 500;
  padding: 5px 10px;
  text-align: center;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c11:hover {
  background-color: rgba(0, 0, 0, 0.04);
  color: #555555;
  border-color: rgba(0, 0, 0, 0);
  font-weight: 500;
}

.c11:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 0px 2px #ffffff;
}

.c11:focus >circle,
.c11:focus >ellipse,
.c11:focus >line,
.c11:focus >path,
.c11:focus >polygon,
.c11:focus >polyline,
.c11:focus >rect {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 0px 2px #ffffff;
}

.c11:focus ::-moz-focus-inner {
  border: 0;
}

.c11:focus:not(:focus-visible) {
  outline-offset: 0px;
  outline: none;
  outline: none;
  box-shadow: none;
}

.c11:focus:not(:focus-visible) >circle,
.c11:focus:not(:focus-visible) >ellipse,
.c11:focus:not(:focus-visible) >line,
.c11:focus:not(:focus-visible) >path,
.c11:focus:not(:focus-visible) >polygon,
.c11:focus:not(:focus-visible) >polyline,
.c11:focus:not(:focus-visible) >rect {
  outline-offset: 0px;
  outline: none;
  outline: none;
  box-shadow: none;
}

.c11:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c0 {
  font-family: 'Metric',Arial,sans-serif;
  font-size: 1.125rem;
  line-height: 1.5rem;
  background-color: #ffffff;
  color: #555555;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {
  .c8 {
    border-radius: 12px;
  }
}

@media only screen and (max-width: 768px) {
  .c10 {
    margin-inline-start: 6px;
  }
}

@media only screen and (max-width: 768px) {

}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {

}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {

}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {

}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {

}

<div
    class="c0"
  >
    <div
      class="c1"
      id="data"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <div
            class="c4"
          >
            <button
              aria-label="Open filters, 1 filter applied"
              class="c5"
              id="data--filters-control"
              type="button"
            >
              <svg
                aria-label="Filter"
                class="c6"
                viewBox="0 0 24 24"
              >
                <path
                  d="m3 6 7 7v8h4v-8l7-7V3H3z"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </button>
          </div>
          <div
            class="c7"
            style="top: 0px; right: 0px; transform: translate(50%, -50%); transform-origin: 100% 0%;"
          >
            <div
              class="c8 Badge__StyledBadgeContainer-sc-1es4ws1-0"
              style="min-height: 18px; min-width: 18px;"
            >
              <span
                class="c9"
              >
                1
              </span>
            </div>
          </div>
        </div>
        <div
          class="c10"
        >
          <button
            class="c11"
            type="button"
          >
            Clear filters
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DataFilter select multiple options search 1`] = `
<DocumentFragment>
  .c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 0 0 auto;
}

.c4 {
  display: inline-block;
  flex: 0 0 auto;
  width: 18px;
  height: 18px;
  fill: #555555;
  stroke: #555555;
}

.c4 g {
  fill: inherit;
  stroke: inherit;
}

.c4 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c4 *[stroke*='#'],
.c4 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c4 *[fill-rule],
.c4 *[FILL-RULE],
.c4 *[fill*='#'],
.c4 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c3 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: none;
  border-radius: 9999px;
  padding: 8px 8px;
  font-size: 1.125rem;
  line-height: 0;
  background-color: rgba(0, 0, 0, 0);
  color: #555555;
  border-style: solid;
  border-width: 1px;
  border-color: rgba(0, 0, 0, 0);
  border-radius: 6px;
  font-weight: 500;
  padding: 8px 8px;
  text-align: center;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c3 >svg {
  display: flex;
  align-self: center;
  vertical-align: middle;
}

.c3:hover {
  background-color: rgba(0, 0, 0, 0.04);
  color: #555555;
  border-color: rgba(0, 0, 0, 0);
  font-weight: 500;
}

.c3:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 0px 2px #ffffff;
}

.c3:focus >circle,
.c3:focus >ellipse,
.c3:focus >line,
.c3:focus >path,
.c3:focus >polygon,
.c3:focus >polyline,
.c3:focus >rect {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 0px 2px #ffffff;
}

.c3:focus ::-moz-focus-inner {
  border: 0;
}

.c3:focus:not(:focus-visible) {
  outline-offset: 0px;
  outline: none;
  outline: none;
  box-shadow: none;
}

.c3:focus:not(:focus-visible) >circle,
.c3:focus:not(:focus-visible) >ellipse,
.c3:focus:not(:focus-visible) >line,
.c3:focus:not(:focus-visible) >path,
.c3:focus:not(:focus-visible) >polygon,
.c3:focus:not(:focus-visible) >polyline,
.c3:focus:not(:focus-visible) >rect {
  outline-offset: 0px;
  outline: none;
  outline: none;
  box-shadow: none;
}

.c3:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c0 {
  font-family: 'Metric',Arial,sans-serif;
  font-size: 1.125rem;
  line-height: 1.5rem;
  background-color: #ffffff;
  color: #555555;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

<div
    class="c0"
  >
    <div
      class="c1"
      id="test-data"
    >
      <div
        class="c2"
      >
        <button
          aria-label="Open filters"
          class="c3"
          id="test-data--filters-control"
          type="button"
        >
          <svg
            aria-label="Filter"
            class="c4"
            viewBox="0 0 24 24"
          >
            <path
              d="m3 6 7 7v8h4v-8l7-7V3H3z"
              fill="none"
              stroke="#000"
              stroke-width="2"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DataFilter should allow filtering on multiple sub-properties from same parent property 1`] = `
<DocumentFragment>
  .c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 0 0 auto;
}

.c8 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  background-color: #2e2e2e;
  color: #ffffff;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
  justify-content: center;
  border-radius: 24px;
}

.c10 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-inline-start: 12px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
}

.c6 {
  display: inline-block;
  flex: 0 0 auto;
  width: 18px;
  height: 18px;
  fill: #555555;
  stroke: #555555;
}

.c6 g {
  fill: inherit;
  stroke: inherit;
}

.c6 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c6 *[stroke*='#'],
.c6 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c6 *[fill-rule],
.c6 *[FILL-RULE],
.c6 *[fill*='#'],
.c6 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c3 {
  position: relative;
}

.c4 {
  position: relative;
  display: block;
}

.c7 {
  position: absolute;
  top: 0;
  right: 0;
}

.c9 {
  font-size: 0.875rem;
  line-height: 1rem;
  color: #ffffff;
  font-weight: normal;
}

.c5 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: none;
  border-radius: 9999px;
  padding: 8px 8px;
  font-size: 1.125rem;
  line-height: 0;
  background-color: rgba(0, 0, 0, 0);
  color: #555555;
  border-style: solid;
  border-width: 1px;
  border-color: rgba(0, 0, 0, 0);
  border-radius: 6px;
  font-weight: 500;
  padding: 8px 8px;
  text-align: center;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c5 >svg {
  display: flex;
  align-self: center;
  vertical-align: middle;
}

.c5:hover {
  background-color: rgba(0, 0, 0, 0.04);
  color: #555555;
  border-color: rgba(0, 0, 0, 0);
  font-weight: 500;
}

.c5:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 0px 2px #ffffff;
}

.c5:focus >circle,
.c5:focus >ellipse,
.c5:focus >line,
.c5:focus >path,
.c5:focus >polygon,
.c5:focus >polyline,
.c5:focus >rect {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 0px 2px #ffffff;
}

.c5:focus ::-moz-focus-inner {
  border: 0;
}

.c5:focus:not(:focus-visible) {
  outline-offset: 0px;
  outline: none;
  outline: none;
  box-shadow: none;
}

.c5:focus:not(:focus-visible) >circle,
.c5:focus:not(:focus-visible) >ellipse,
.c5:focus:not(:focus-visible) >line,
.c5:focus:not(:focus-visible) >path,
.c5:focus:not(:focus-visible) >polygon,
.c5:focus:not(:focus-visible) >polyline,
.c5:focus:not(:focus-visible) >rect {
  outline-offset: 0px;
  outline: none;
  outline: none;
  box-shadow: none;
}

.c5:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c11 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: none;
  border-radius: 9999px;
  padding: 5px 10px;
  font-size: 1.125rem;
  line-height: 1.5rem;
  background-color: rgba(0, 0, 0, 0);
  color: #555555;
  border-style: solid;
  border-width: 1px;
  border-color: rgba(0, 0, 0, 0);
  border-radius: 6px;
  font-weight: 500;
  padding: 5px 10px;
  text-align: center;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c11:hover {
  background-color: rgba(0, 0, 0, 0.04);
  color: #555555;
  border-color: rgba(0, 0, 0, 0);
  font-weight: 500;
}

.c11:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 0px 2px #ffffff;
}

.c11:focus >circle,
.c11:focus >ellipse,
.c11:focus >line,
.c11:focus >path,
.c11:focus >polygon,
.c11:focus >polyline,
.c11:focus >rect {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 0px 2px #ffffff;
}

.c11:focus ::-moz-focus-inner {
  border: 0;
}

.c11:focus:not(:focus-visible) {
  outline-offset: 0px;
  outline: none;
  outline: none;
  box-shadow: none;
}

.c11:focus:not(:focus-visible) >circle,
.c11:focus:not(:focus-visible) >ellipse,
.c11:focus:not(:focus-visible) >line,
.c11:focus:not(:focus-visible) >path,
.c11:focus:not(:focus-visible) >polygon,
.c11:focus:not(:focus-visible) >polyline,
.c11:focus:not(:focus-visible) >rect {
  outline-offset: 0px;
  outline: none;
  outline: none;
  box-shadow: none;
}

.c11:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c0 {
  font-family: 'Metric',Arial,sans-serif;
  font-size: 1.125rem;
  line-height: 1.5rem;
  background-color: #ffffff;
  color: #555555;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {
  .c8 {
    border-radius: 12px;
  }
}

@media only screen and (max-width: 768px) {
  .c10 {
    margin-inline-start: 6px;
  }
}

@media only screen and (max-width: 768px) {

}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {

}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {

}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {

}

<div
    class="c0"
  >
    <div
      class="c1"
      id="data"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <div
            class="c4"
          >
            <button
              aria-label="Open filters, 2 filters applied"
              class="c5"
              id="data--filters-control"
              type="button"
            >
              <svg
                aria-label="Filter"
                class="c6"
                viewBox="0 0 24 24"
              >
                <path
                  d="m3 6 7 7v8h4v-8l7-7V3H3z"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </button>
          </div>
          <div
            class="c7"
            style="top: 0px; right: 0px; transform: translate(50%, -50%); transform-origin: 100% 0%;"
          >
            <div
              class="c8 Badge__StyledBadgeContainer-sc-1es4ws1-0"
              style="min-height: 18px; min-width: 18px;"
            >
              <span
                class="c9"
              >
                2
              </span>
            </div>
          </div>
        </div>
        <div
          class="c10"
        >
          <button
            class="c11"
            type="button"
          >
            Clear filters
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
